--- a/src/partials/_variables.scss
+++ b/src/partials/_variables.scss
@@ -1,10 +1,24 @@
 // WARNING COLORI
 
+$bgcHeader: rgb(46, 58, 70);
+
 $bgcBody: #1E2D3B;
 
+$bgcBoxCd: rgb(46, 58, 70);
+
+
+$cdTitle: white;
+
+$cdInfo: grey;
 
 
 
-// WARNING ALTEZZE
+
+// WARNING ALTEZZE E LARGHEZZE
+
+$wHeader: 100%;
+$hHeader: 70px;
 
 $hBody: 100vh;
+
+$hCd: 360px;
