--- a/src/partials/_mixins.scss
+++ b/src/partials/_mixins.scss
@@ -5,3 +5,10 @@
     margin: 0 auto;
   }
 }
+
+
+@mixin flex ($justify:center, $align:center) {
+  display: flex;
+  justify-content: $justify;
+  align-items: $align;
+}
